--- a/style.css
+++ b/style.css
@@ -32,6 +32,27 @@ h1 {
   border: 2px solid #333;
   font-size: 24px;
 }
+#keyboard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.keyboard-row {
+    display: flex;
+    justify-content: center;
+    margin: 5px 0;
+}
+
+.key {
+    width: 35px;
+    height: 35px;
+    margin: 2px;
+    border: none;
+    background-color: #ddd;
+    cursor: pointer;
+}
 
 #guessInput {
   margin-right: 10px;
