--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body, html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
-  margin: 0;
+  height: 88vh;
+  margin-top: 12vh;
   padding: 0;
   font-family: Arial, sans-serif;
 }
@@ -12,7 +12,8 @@ body, html {
 h1 {
   text-align: center; 
   margin-top: 0; 
-  padding: 20px 0; 
+  padding: 1.5% 0; 
+  height: 10vh
   background-color: #ffffff; 
   color: #ff0000; 
   font-family: Arial, sans-serif; 
@@ -42,13 +43,13 @@ h1 {
 .keyboard-row {
     display: flex;
     justify-content: center;
-    margin: 5px 0;
+    margin: 1% 0;
 }
 
 .key {
-    width: 35px;
-    height: 35px;
-    margin: 2px;
+    width: 100%;
+    height: 100%;
+    margin: 1%;
     border: none;
     background-color: #ddd;
     cursor: pointer;
@@ -62,19 +63,19 @@ h1 {
   display: grid;
     grid-template-columns: repeat(5, 60px); 
     grid-template-rows: repeat(6, 60px); 
-    gap: 10px; 
+    gap: 1%; 
     justify-content: center; 
-    margin-top: -200px; 
-    padding: 10px;
+    margin-top: -12vh; 
+    padding: 1%;
 }
 .wordle-box {
-  width: 60px;
-  height: 60px;
+  width: 80%;
+  height: 80%;
   border: 2px solid #787c7e; /* Gray border */
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 32px;
+  font-size: 100%;
   font-weight: bold;
   color: #000; /* Black text, if needed */
 }
