--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
   text-align: center; 
   margin-top: 0; 
   padding: 1.5% 0; 
-  height: 10vh
+  height: 10vh;
   background-color: #ffffff; 
   color: #ff0000; 
   font-family: Arial, sans-serif; 
