--- a/templates/SmartWordle.html
+++ b/templates/SmartWordle.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Wordle Game</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.1/pyscript.css" />
-        <script defer src="https://pyscript.net/releases/2024.1.1/pyscript.js"></script>
-    </head>
-    <body>
-        <h1>Smart Wordle</h1>
-        <div class="wordle-grid"></div>
-        <button id = "playAgainButton" style = "display: none;"> Play Again </button>
-        <div id="keyboard"></div>
-        <script src="script.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wordle Game</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Smart Wordle</h1>
+    <div class="wordle-grid"></div>
+    <button id="playAgainButton" style="display: none;">Play Again</button>
+    <div id="keyboard"></div>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+</body>
 </html>
