Made website looked a bit nicer

--- a/templates/SmartWordle.html
+++ b/templates/SmartWordle.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Smart Wordle</h1>
+    <h1 class = "title">Smart Wordle</h1>
+    <p class="description">A Wordle that gets harder every time you play!</p>
     <div class="wordle-grid"></div>
     <button id="playAgainButton" style="display: none;">Play Again</button>
     <div id="keyboard"></div>
