--- a/static/style.css
+++ b/static/style.css
@@ -1,29 +1,28 @@
 body, html {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
-  margin: 0;
+  height: 88vh;
+  margin-top: 12vh;
   padding: 0;
   font-family: Arial, sans-serif;
-  position: relative;
 }
 
 h1 {
   text-align: center; 
-  padding: 20px 0; 
+  margin-top: 0; 
+  padding: 1.5% 0; 
   height: 10vh;
   background-color: #ffffff; 
   color: #ff0000; 
   font-family: Arial, sans-serif; 
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.description {
-  text-align: center;
-  margin-top: -15%;
-}
 
 .guess {
   display: flex;
@@ -34,16 +33,11 @@ h1 {
   border: 2px solid #333;
   font-size: 24px;
 }
-
-#playAgainButton {
-  border-radius: 10px;
-}
-
 #keyboard {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 60px;
+    margin-top: 20px;
 }
 
 .keyboard-row {
@@ -51,37 +45,34 @@ h1 {
     justify-content: center;
     margin: 1% 0;
 }
-
 .key {
     width: 100%;
     height: 100%;
     margin: 1%;
     border: none;
-    background-color: #ddd;
+    background-color: #d3d6da;
     cursor: pointer;
 }
-
 #guessInput {
   margin-right: 10px;
 }
-
 .wordle-grid {
   display: grid;
     grid-template-columns: repeat(5, 60px); 
     grid-template-rows: repeat(6, 60px); 
+    gap: 1%; 
     justify-content: center; 
-    margin: 20px 0;
+    margin-top: -12vh; 
     padding: 1%;
 }
 .wordle-box {
   width: 80%;
   height: 80%;
-  border: 2px solid #787c7e; /* Gray border */
+  border: 2px solid #d3d6da; /* Gray border */
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 100%;
   font-weight: bold;
   color: #000; /* Black text, if needed */
-  border-radius: 10px;
 }
