--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,17 @@
 body, html {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  overflow: hidden;
   height: 100vh;
-  margin-top: 15vh;
   padding: 0;
+  margin: 0;
   font-family: Arial, sans-serif;
 }
 
+.main-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 h1 {
   text-align: center; 
   margin-top: 0; 
@@ -19,8 +22,18 @@ h1 {
   font-family: Arial, sans-serif; 
   width: 100%;
   position: absolute;
+  font-size: 8vh;
   top: 0;
   left: 0;
+}
+
+p {
+    text-align: center;
+    margin-top: 0px;  
+    margin-bottom: 20px;  
+    font-size: 4vh;  
+    font-weight: bold;
+    padding: 0 10px;  
 }
 
 .text{
@@ -42,33 +55,47 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 150px;
 }
 
 .keyboard-row {
     display: flex;
     justify-content: center;
-    margin: 2% 0;
+    margin: .5% 0;
 }
 .key {
-    width: 100%;
-    height: 100%;
-    margin: 1.5%;
+    width: 5vh;
+    height: 4vh;
+    margin: .5%;
+    border-radius: 14px;
     border: none;
     background-color: #d3d6da;
     cursor: pointer;
+    BORDER: 2px solid #686e75;
 }
 #guessInput {
   margin-right: 10px;
 }
+
+#playAgainButton {
+    position: fixed;
+    margin-top: 520px;
+    width: 10vw;
+    height: 3vh;
+    border-radius: 14px;
+}
+
 .wordle-grid {
-  display: grid;
-    grid-template-columns: repeat(5, 60px); 
-    grid-template-rows: repeat(6, 60px); 
+    display: grid;
+    grid-template-columns: repeat(5, 80px); 
+    grid-template-rows: repeat(6, 80px); 
+    height: 400px;
+    width: 350px;
     gap: 1%; 
     justify-content: center; 
-    margin-top: -32vh; 
-    padding: 1%;
+    align-items: center;
+    margin-top: 10vh; 
+    padding-bottom: 0;
 }
 .wordle-box {
   width: 80%;
@@ -78,7 +105,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 100%;
+  font-size: 2vh;
   font-weight: bold;
   color: #000; /* Black text, if needed */
 }
@@ -191,4 +218,47 @@ h1 {
 
 .signout-btn:hover {
     background-color: #bd2130;
+}
+
+
+.stats-sidebar {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 250px;  
+    height: 120vh;
+    background-color: #f9f9f9;
+    border-right: 1px solid #ccc;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    box-sizing: border-box;
+    overflow-y: auto;  
+    overflow-x: hidden;  
+}
+
+.stats-table {
+    width: 100%; /* Full width of the sidebar */
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+.stats-table th, .stats-table td {
+    text-align: left;
+    padding: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.stats-table th:nth-child(1), .stats-table td:nth-child(1) {
+    width: 60%;  
+}
+
+.stats-table th:nth-child(2), .stats-table td:nth-child(2) {
+    width: 40%;  
+}
+
+.stats-table th {
+    background-color: #eee; /* Light background for header */
 }
