--- a/static/style.css
+++ b/static/style.css
@@ -248,6 +248,66 @@ p {
     background-color: #bd2130;
 }
 
+.toggle-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    position: fixed;
+    padding: 10px;
+    top: 40px;
+    right: 0;
+}
+
+.toggle-container .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin-right: 10px;
+}
+
+.toggle-container .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.toggle-container .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.toggle-container .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+.toggle-container input:checked + .slider {
+    background-color: #2196F3;
+}
+
+.toggle-container input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+#toggleLabel {
+    font-size: 16px;
+    color: #000;
+}
 
 .stats-sidebar {
     position: fixed;
