--- a/static/style.css
+++ b/static/style.css
@@ -97,7 +97,8 @@ p {
     height: 3vh;
     border-radius: 14px;
 }
-/* Add this to your CSS file */
+
+/* Win animation */
 @keyframes win-animation {
     0%, 100% {
         transform: scale(1);
@@ -109,9 +110,10 @@ p {
     }
 }
 
-.wordle-box.win {
+.wordle-box.win .back{
     animation: win-animation 1s ease-in-out forwards;
 }
+
 
 .wordle-grid {
     display: grid;
@@ -125,6 +127,8 @@ p {
     margin-top: 10vh; 
     padding-bottom: 0;
 }
+
+/* Add this to your CSS file */
 .wordle-box {
   width: 80%;
   height: 80%;
@@ -136,6 +140,41 @@ p {
   font-size: 2vh;
   font-weight: bold;
   color: #000; /* Black text, if needed */
+  position: relative;
+  perspective: 1000px; /* Perspective for 3D effect */
+}
+
+.wordle-box .front,
+.wordle-box .back {
+  width: 100%;
+  height: 100%;
+  border-radius: 14px;
+  border: 2px solid #d3d6da; /* Gray border */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: #000; /* Black text, if needed */
+  position: absolute;
+  transition: transform 0.6s;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+
+.wordle-box .front {
+  transform: rotateX(0deg);
+}
+
+.wordle-box .back {
+  transform: rotateX(180deg);
+}
+
+.wordle-box.flipped .front {
+  transform: rotateX(180deg);
+}
+
+.wordle-box.flipped .back {
+  transform: rotateX(0deg);
 }
 
 /* Container for the form elements */
@@ -309,24 +348,43 @@ p {
     color: #000;
 }
 
+.sidebar-toggle {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 1001;
+}
+
+#toggleSidebarButton {
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
 .stats-sidebar {
     position: fixed;
     z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 250px;  
-    height: 120vh;
+    left: -250px;  /* Hide the sidebar off-screen initially */
+    top: 0px;
+    width: 250px;
+    height: 100vh;
     background-color: #f9f9f9;
     border-right: 1px solid #ccc;
     padding: 20px;
     box-shadow: 2px 0 5px rgba(0,0,0,0.1);
     box-sizing: border-box;
-    overflow-y: auto;  
-    overflow-x: hidden;  
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: left 0.3s ease;  /* Smooth transition for sliding in/out */
+}
+
+.stats-sidebar.open {
+    left: 0;  /* Move the sidebar into view */
 }
 
 .stats-table {
-    width: 100%; /* Full width of the sidebar */
+    width: 100%;
     table-layout: fixed;
     border-collapse: collapse;
 }
@@ -340,15 +398,15 @@ p {
 }
 
 .stats-table th:nth-child(1), .stats-table td:nth-child(1) {
-    width: 60%;  
+    width: 60%;
 }
 
 .stats-table th:nth-child(2), .stats-table td:nth-child(2) {
-    width: 40%;  
+    width: 40%;
 }
 
 .stats-table th {
-    background-color: #eee; /* Light background for header */
+    background-color: #eee;
 }
 
 /* for stats for games for each guess # */
