--- a/templates/SmartWordle.html
+++ b/templates/SmartWordle.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <div class="stats-sidebar">
+    <div class="sidebar-toggle">
+        <button id="toggleSidebarButton">☰</button>
+    </div>
+    <div class="stats-sidebar" id="statsSidebar">
+        <br/>
         <h3>Player Stats</h3>
         <table class="stats-table">
             <tr>
@@ -63,7 +67,12 @@
         {% endwith %}
         <h1>Smart Wordle</h1>
         <p>A Wordle that gets harder and harder!</p>
-        <div class="wordle-grid"></div>
+        <div class="wordle-grid">
+            <div class="wordle-box">
+                <div class="front"></div>
+                <div class="back"></div>
+            </div>
+        </div>
         <button id="playAgainButton" style="display: none;">Play Again</button>
         <div id="keyboard"></div>
         <script src="{{ url_for('static', filename='script.js') }}"></script>
