--- a/static/style.css
+++ b/static/style.css
@@ -348,6 +348,10 @@ p {
     color: #000;
 }
 
+.logged-out-position {
+    top: 70px;
+}
+
 .sidebar-toggle {
     position: fixed;
     top: 10px;
