--- a/static/style.css
+++ b/static/style.css
@@ -55,7 +55,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 20vh;
 }
 
 .keyboard-row {
@@ -92,7 +92,7 @@ p {
 
 #playAgainButton {
     position: fixed;
-    margin-top: 520px;
+    margin-top: 37vh;
     width: 10vw;
     height: 3vh;
     border-radius: 14px;
