--- a/templates/SmartWordle.html
+++ b/templates/SmartWordle.html
@@ -76,6 +76,8 @@
             </div>
         </div>
         <button id="playAgainButton" style="display: none;">Play Again</button>
+        <img id = "logo" src = "{{ url_for('static', filename='logo.png') }}">
+        <div id="chatBox"> </div>
         <div id="keyboard"></div>
         <script src="{{ url_for('static', filename='script.js') }}"></script>
         
